SMHE-1338 Sonar Cloud HighPrio issues
Signed-off-by: Natasja Nortier <natasja.nortier@alliander.com>